tests/idris2/coverage013/expected
1/1: Building Issue1022 (Issue1022.idr)
Error: test8 eq is not a valid impossible case.

Issue1022.idr:25:1--25:20
 21 | 
 22 | -- The following ones are actually possible
 23 | 
 24 | test8 : Not (a = Type)
 25 | test8 eq impossible
      ^^^^^^^^^^^^^^^^^^^

Error: test9 eq is not a valid impossible case.

Issue1022.idr:28:1--28:20
 24 | test8 : Not (a = Type)
 25 | test8 eq impossible
 26 | 
 27 | test9 : Not (a = 'a')
 28 | test9 eq impossible
      ^^^^^^^^^^^^^^^^^^^

Error: test10 eq is not a valid impossible case.

Issue1022.idr:31:1--31:21
 27 | test9 : Not (a = 'a')
 28 | test9 eq impossible
 29 | 
 30 | test10 : Not (a = Nat)
 31 | test10 eq impossible
      ^^^^^^^^^^^^^^^^^^^^

Error: test11 eq is not a valid impossible case.

Issue1022.idr:34:1--34:21
 30 | test10 : Not (a = Nat)
 31 | test10 eq impossible
 32 | 
 33 | test11 : Not (3 = a)
 34 | test11 eq impossible
      ^^^^^^^^^^^^^^^^^^^^

